Fix height image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -735,10 +735,9 @@ section.subpage {
 
 .subpage img {
 	-webkit-box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.01);
-	 box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.01)l;
-    border-radius: 4px;
+	 box-shadow: 0px 8px 26px 2px rgba(0, 0, 0, 0.01);
 	padding: 0;
-	max-height:100%;
+	height:auto;
 	transition: all 0.625s cubic-bezier(0, 0, 0.2, 1);
 }
 
